--- a/doc-header.html
+++ b/doc-header.html
@@ -1,4 +1,4 @@
-<link rel="icon" href="https://github.com/Apich-Organization/apich-logo/blob/main/favicon.ico">
+<link rel="icon" href="https://raw.githubusercontent.com/Apich-Organization/rssn/refs/heads/dev/doc/favicon.ico">
 <style>
     /* You can even add custom styles here to match your org's branding */
     .sidebar .location {
